changed add album in view